--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
-    "name": "simple-lms-api",
-    "main": "app.js",
-    "dependencies": {
-        "express": "~4.0.0"
-    }
+  "name": "simple-lms-api",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "async": "^0.8.0",
+    "body-parser": "^1.0.2",
+    "debug": "^0.7.4",
+    "express": "^4.0.0",
+    "morgan": "^1.0.1",
+    "prompt": "^0.2.14"
+  },
+  "devDependencies": {}
 }
