--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "gulp": "^3.9.0",
     "async": "^0.8.0",
     "body-parser": "^1.0.2",
     "debug": "^0.7.4",
     "express": "^4.0.0",
+    "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.3",
     "morgan": "^1.0.1",
+    "mysql": "^2.8.0",
     "prompt": "^0.2.14"
   },
   "devDependencies": {}
