Restructure project and include jshint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ db:
         - MYSQL_PASSWORD=simplelmspw
 app:
     build: .
-    command: node ./bin/www
+    command: node ./app/bin/www
     volumes:
         - .:/webapp_root
     ports:
