--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app/bin/www"
   },
   "dependencies": {
     "async": "^0.8.0",
@@ -16,5 +16,8 @@
     "mysql": "^2.8.0",
     "prompt": "^0.2.14"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gulp-jshint": "^1.11.2",
+    "jshint-stylish": "^2.0.1"
+  }
 }
